data/derived/comb/progs/unify/prog7882.ml.out
Characters 58-70:
  | hd::t -> removeZero l :: h;;
             ^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
